@@ -7,10 +7,13 @@ AUX queuemetrics.socket 126 SHA256 a04679c03f2cd417cd03e6e6d233cdc749a4adc86cb04
 AUX server.xml 1628 SHA256 6efaee54a0a4246a82e835ff94ec37906f0846b517bf066d0b728ce74d08298a SHA512 6e5134dbb9e616c01dd2f827002bd947875234d19bce8c320e0f279d56f46062ce77f0ade56cd29e87cfbba85fb02d1c0983c5e21b8621b1544d383bd53df1cc WHIRLPOOL 0ac36562cf9cd2b7f55f2293fbfed6a3f89f24c5572ae36ca59769ea90e4cdf2ac374dd9d7c8f71aeb7dbfe734c762fdf1bc1bcd580186763ae3adeb8fb66fe3
 DIST QueueMetrics-19.04.3.tar.gz 15410850 SHA256 2473223016d3d1c4dacffd3f93dbb5595d58e215cbea22d8cf2caf1ee83da1de SHA512 88537347fa3cc89ea1ec7f29dba2764de3d11283b494a03dfb8b1d25f39783ae038bb3abf2774dfd537f6cd035919d805bf7c772f29c917449cf42fdec6aeb69 WHIRLPOOL 92cbc8e5c7aa7405b01e52310ab4a758c485045600162cffff41847a794849ac9ea2a0785da33114f5c7b90f0d7b500c19cc3ee4f90108860fbcd6c6c417893b
 DIST QueueMetrics-19.10.1.tar.gz 16148354 SHA256 eb81b15917ea39a0e40995fd76824f80d649366b3e7780276071f3816c8d23a2 SHA512 ea404b8c3b9aff0addb4b82ee0ff9a3a7cf0cd0516723da5c8f8e528539382362142524e9f304e2bbcab7346902ea2bb4b1bd28aaf7d458077ecd5ba4454422f WHIRLPOOL 881b3d9027f6f79230aad1c8c973dff5d1efbd8c98d1e00c67ec8b197e437bc489d4e999b7aa22473be751e55623884704b40f34710fd5b67ed1ab7ce44ad670
+DIST QueueMetrics-19.10.2.tar.gz 16154943 SHA256 73aedfd811df4aa7cbe22d91acc8803948209a38c9dfe830997ec8edc5a2d9f7 SHA512 8121a289083bdf9b3cf4bfbf53855ee5da4195786b2c03495f5d91a213166fc8d7b78de49f6b336cc2399f6b6f92d4de91bd194a659cbbae1e23a5e8c396d3a3 WHIRLPOOL 7c148989664458ca0c2be82f21f6c79cd3d3a99f8d9bb98c162a2e39b940b01a1ab62a47c8cb2951917b6c82a69799943863011ff6cd48400ebbd53f5339e9d0
 DIST apache-tomcat-8.5.42.tar.gz 9711748 SHA256 e3bebd1ecfdf439dc54f9a6f72f8fb22f33324223337f040860fd0cdf95220b5 SHA512 3e6b38e48d315d142e96f8e3809c86632f3c3903f8751c6602581a587edf840893ff0c737a65fcf9560a495b0118b5b8d60d4d1ce7947fe2abe34a89839b640f WHIRLPOOL 408cc695a79d1bd0338a47ab9424c7fb1484ddada6a55858cc973147b9e423db638fc89091e74bdf51d20b4b9e448de5c0ff75cae7a6a6ecc62468e7088deb5e
 DIST apache-tomcat-8.5.43.tar.gz 9717059 SHA256 5352ab0cc4b6e71caf9161da8c4316e9cd8691bc9f5ac3e8d8b3d259ca2bae03 SHA512 422eda76c5291a3d5ca5fbd679336997371eef913a6bcf95d17bb5b3ba41a3e033c022789cb61a56914be11251492f6c4fced72dbfefb33b31a3b5b0243335c5 WHIRLPOOL 8fe17ce48132966a5ea25260b96c9d8acc3dc2dfb35e515fc3739d7d8048d9365b7f85fbf66c32152eecc688ba290b21267ed0b920283e9859382b029f2c5d4d
+DIST apache-tomcat-8.5.47.tar.gz 10267082 SHA256 dd08cf2675675d012f87127701794f767eaa1ddfa2734c143381f39bef611761 SHA512 079b85f3dfca2b137634859208fae6012860201d720d12ff0add3473f1e267d332cb12803958754e1f922599e0d42b7e97f00bcd62584d9148a6f45fde091716 WHIRLPOOL 852257487747565475da7c384da2070f1958e1b7fa42f157d8b75cc9e0e744f3029aac84ab48c449c6bf8585b0792c1041790fd52cae8ea7fb895ec84689657f
 EBUILD queuemetrics-19.04.3-r1.ebuild 1731 SHA256 2b3b401575a52bc114c9561e87901b8413d4eeb580f6076fdb67195a2bbaff91 SHA512 022c630b75c82e53d38cd33bb61a7b9707f1c1b37cb45b2ca666077609404bfcb6cca2ead202108b21e6abc7bcab495697e7f094b1a5a84fe42e11efc4589c5a WHIRLPOOL 4edf1a9e7bcf6fceea506fdff450c8de1965a9952b100b5bb3c67303930fa71e5cec7eaba1d0b6f9bfc32d79ddc146d040e9910cb699f808750766074e616f40
 EBUILD queuemetrics-19.04.3-r2.ebuild 1981 SHA256 af3a39ed109e2364aad609649f9603b08702e7028bb33f11468414a02b092888 SHA512 d1e00a46f2482d0149b63cb29dcfc62dd854a8d2ff498e8caf39439d0f83e94d61235940981bb2ea16e32af2856654707365b5715ba67539a71c75b92fb90f08 WHIRLPOOL 3db68b693686d1959ac396882835f9bfeddca14388d5eba05b3a93e3f50199ff1c24bdecc7dc8c3c2fda947a44530d014df96984da1d5537f83a12508b516b28
 EBUILD queuemetrics-19.10.1.ebuild 1981 SHA256 af3a39ed109e2364aad609649f9603b08702e7028bb33f11468414a02b092888 SHA512 d1e00a46f2482d0149b63cb29dcfc62dd854a8d2ff498e8caf39439d0f83e94d61235940981bb2ea16e32af2856654707365b5715ba67539a71c75b92fb90f08 WHIRLPOOL 3db68b693686d1959ac396882835f9bfeddca14388d5eba05b3a93e3f50199ff1c24bdecc7dc8c3c2fda947a44530d014df96984da1d5537f83a12508b516b28
-MISC ChangeLog 2300 SHA256 03e06b728be241d5fe579b012c220c0fecff4da779e9ad6cf7319db9d582e920 SHA512 a605689e6116454248dce8bf07827ecdea9ff63fe9cd14b652295d788d64d16bb57312a6bc1d2f5df4db22d3b93280d57db102245f3a2678a9f5f54e4f78c339 WHIRLPOOL 0034b3bf4d1c3304e892d6128a1ad8e0922ac4e92e1a11b97560006621c59af66011663bac854082d41a346e158121d7919b674a316f9e0fc1e63108716f0c90
+EBUILD queuemetrics-19.10.2.ebuild 1981 SHA256 a9776ada5d247355b68289b6158976914afca297fddc12f59f613f1d7c9b43cc SHA512 da874dab6b40f2e036846ed8774753ef11e763a36b40e8f4eb62ad14124e1aea5db84bc0e044c625ea75f3e4802f409fb88463b7e60516fd002a0f7baf453ddf WHIRLPOOL 3a0b8894941eb78e318cc111f087c71f755d04b6be38f0ebcff30149eb110dfc88b22e4d715dba93f290399987502e5c1c0d82b0b4b4d6f0e1a9478c39250957
+MISC ChangeLog 2469 SHA256 c4a2e940d0b91fae22be8cfecdb97b7cb81f198571b089421fce14c94adaebbc SHA512 ee7ef0ef21482d504a460d4579250773913f73ab33492787361c6747974d72f1c3d839435544d7692e1002aac09df235b5509975a787db4bd84d8923dd7a808b WHIRLPOOL 9d2d74e4c50c0037c1b6e731dadd38c5097f30fb66cf124a2c06e0d9d75f4def00f73d64f683e79a15211dc97869a809e36d1dbc1858ca873b3a07ce3a0916e8
 MISC metadata.xml 389 SHA256 3d4f1ca7609f74c3bddef49ce0d31edb1b23cd221ee6abe001abecaac65ec87e SHA512 52df615f053daaa05ae886a8c32149d4b714e7cb8e03804fc39b16160dd3f1381645c9d5a15ce113e875234fbecbf005879dd57bbb418eddfcc901354da498f2 WHIRLPOOL 506f357243b5b1bb8e427132b19b86865932dba8344c895debb1074fa301f308850ced982a2eb29c5becebfa788b5ed7465fd285e2bf53bae95a8d680fe8cc20
