@@ -1,3 +1,8 @@
+*queuemetrics-19.10.2 (24 Oct 2019)
+
+  24 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.2.ebuild:
+  app-metrics/queuemetrics: version bump to 19.10.2
+
 *queuemetrics-19.10.1 (21 Oct 2019)
 
   21 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.1.ebuild:
